webcleaner (0.31) unstable; urgency=low

  * debian/webcleaner.docs, MANIFEST.in: remove draft-lutuonen...txt
  * HTML-encode attribute values
  * debian/rules: remove patch backup file from build dir
  * use _WIN32, not WIN32. Fixes compile error on Windows

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 10 Dec 2001 08:29:45 +0100

webcleaner (0.30) unstable; urgency=low

  * wcheaders, webcleanerconf: only enable() edit/remove buttons when
    they can do something
  * more advert filters
  * use string methods where possible
  * webcleanerconf: better help dialog window

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  1 Dec 2001 13:13:52 +0100

webcleaner (0.29) unstable; urgency=low

  * wcheaders:
    - distinguish between incoming and outgoing headers for the onlyfirst
      option
    - catch URLErrors (they are thrown when the proxy is not running)
  * new header filter for Accept* headers (default disabled)
  * setup.py
    - adjust .bat files on Windows to be executable out-of-the-box
    - use "libxml2" as libxml library name on Windows
    - use os.getcwd(), not "."
  * compile fix for Windows in htmlsax.c
  * minor debug output improvements
  * use Pythons internal gettext module, get rid of fintl.py
  * remove webcleaner.bat, we only need webcleanerconf.bat for Windows

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 29 Nov 2001 15:59:53 +0100

webcleaner (0.28) unstable; urgency=low

  * fix another flush error when self.attrs is not set
  * use re.sub() in Replacer.py, this is much faster

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 19:45:18 +0100

webcleaner (0.27) unstable; urgency=low

  * wcheaders option window improvements
  * on Debian use init.d script for proxy start/stop/restart in
    webcleanerconf

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 11:00:53 +0100

webcleaner (0.26) unstable; urgency=low

  * fix flushing in proxy
  * updated german .po file
